background, clock, btns etc

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
     <div class="container">
         <div class="card">
-            <img src="muie.jpg" alt="Imagem de fundo">
+            <img src="icon.jpg" alt="Imagem de fundo">
             <div class="content">
                 <h1>ImNeli</h1>
-                <p>Just one more</p>
+                <p>Fullstack Dev</p>
                 <ul class="links">
                     <li><a href="https://github.com/imneli">Github</a></li>
                     <li><a href="https://www.youtube.com/channel/UCU1DBgTeiSK9D9ceEoJ0_iw">YouTube</a></li>
@@ -26,21 +26,5 @@
         </div>
     </div>
 
-    <div class="relogio">
-        <div>
-            <span id="hours">00</span>
-            <span class="time">Hour</span>
-        </div>
-        <div>
-            <span id="minutes">00</span>
-            <span class="time">Minute</span>
-        </div>
-        <div>
-            <span id="segun">00</span>
-            <span class="time">Seconds</span>
-        </div>
-    </div>
-
-    <script src="script.js"></script>
 </body>
 </html>
